Añadir message properties para leyenda. modificaciones sql. Terminar DTO